--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "element-ui": "^2.13.2",
     "vant": "^2.9.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
